Adjust z-index to prevent background image from overlaying

--- a/src/App.css
+++ b/src/App.css
@@ -61,11 +61,3 @@ main h1 {
     z-index: 0;
     pointer-events: none;
 }
-
-.tag {
-    background-color: var(--color-high);
-    color: white;
-    padding: 5px 10px;
-    border-radius: 25px;
-    font-size: .75rem;
-}
